crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE TIMESTAMPTZ_TBL;
---
TruncateStmt@0..25
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..24
    Ident@9..24 "TIMESTAMPTZ_TBL"
  Ascii59@24..25 ";"

