crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@252.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2014-10-26 00:59:59 MSK'::timestamptz;"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    TypeCast@7..45
      AConst@7..32
        Sconst@7..32 "'2014-10-26 00:59:59  ..."
      Typecast@32..34 "::"
      TypeName@34..45
        Ident@34..45 "timestamptz"
  Ascii59@45..46 ";"

